Sidebar: avoid using two scrollbars by fixing bottom position
- set a fixed bottom position only when on calc (due to tabs)

--- a/loleaflet/css/loleaflet.css
+++ b/loleaflet/css/loleaflet.css
@@ -192,13 +192,14 @@ body {
 	position: absolute;
 	top: 77px;
 	right: 0px;
-	bottom: 72px;
 	border-top: 1px solid #b6b6b6;
 	border-left: 1px solid #b6b6b6;
 	overflow: hidden;
 	z-index: 990;
 }
-
+nav.spreadsheet-color-indicator ~ #sidebar-dock-wrapper {
+	bottom: 72px;
+}
 #sidebar-panel {
 	padding: 0px;
 	margin: 0px;
